src/objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>DB_Campaign_Tactic__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <label>DB Campaign Tactic</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Print Advertisement</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Employment Seminars</fullName>
                </value>
                <value>
                    <fullName>Webinars</fullName>
                </value>
                <value>
                    <fullName>Public Relations</fullName>
                </value>
                <value>
                    <fullName>Partners</fullName>
                </value>
                <value>
                    <fullName>Referral Program</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Lunches</fullName>
                </value>
                <value>
                    <fullName>Direct Mail</fullName>
                </value>
                <value>
                    <fullName>Sales Call Down</fullName>
                </value>
                <value>
                    <fullName>Online Banners/Ads</fullName>
                </value>
                <value>
                    <fullName>Internal Website</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LeanData__Back_Dated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Back-Dated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LeanData__Rep_LT_Attribution__c</fullName>
        <label>LD LT Attribution</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LeanData__Rep_LT_Bookings_Attribution__c</fullName>
        <label>LD LT Bookings Attribution</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LeanData__Rep_LT_Generated_Attribution__c</fullName>
        <label>LD LT Generated Attribution</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LeanData__Rep_LT_Generated_Bookings_Attribution__c</fullName>
        <label>LD LT Generated Bookings Attribution</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LeanData__Rep_MT_Accelerated_Attribution__c</fullName>
        <label>LD MT Accelerated Attribution</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LeanData__Rep_MT_Accelerated_Bookings_Attr__c</fullName>
        <label>LD MT Accelerated Bookings Attribution</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LeanData__Rep_MT_Generated_Attribution__c</fullName>
        <label>LD MT Generated Attribution</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LeanData__Rep_MT_Generated_Bookings_Attribution__c</fullName>
        <label>LD MT Generated Bookings Attribution</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LeanData__Reporting_Average_Days_To_Close__c</fullName>
        <label>Reporting Average Days to Close</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeanData__Reporting_Bookings_Attribution__c</fullName>
        <label>LD MT Bookings Attribution</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LeanData__Reporting_Campaign_Member_Totals__c</fullName>
        <label>Reporting Campaign Member Totals</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LeanData__Reporting_Cost__c</fullName>
        <label>Reporting Cost</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LeanData__Reporting_FT_Attribution_Amount__c</fullName>
        <label>LD FT Attribution</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LeanData__Reporting_FT_Bookings_Attribution__c</fullName>
        <label>LD FT Bookings Attribution</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LeanData__Reporting_Lift__c</fullName>
        <label>Reporting Lift</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LeanData__Reporting_MT_Attribution_Amount__c</fullName>
        <label>LD MT Attribution</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LeanData__Reporting_Num_Target_Campaign_Members__c</fullName>
        <label>Number of Target Campaign Members</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeanData__Reporting_Number_Of_Campaign_Members__c</fullName>
        <label>Reporting Number of Campaign Members</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeanData__Reporting_Number_Of_Opportunities__c</fullName>
        <label>Reporting Number of Opportunities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeanData__Reporting_Number_Of_Touches__c</fullName>
        <label>Reporting Number of Touches</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeanData__Reporting_On_Target__c</fullName>
        <label>Reporting On-Target</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LeanData__Reporting_Opportunity_Close_Rate__c</fullName>
        <label>Reporting Opportunity Close Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <listViews>
        <fullName>AllActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active Campaigns</label>
    </listViews>
    <listViews>
        <fullName>MyActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Active Campaigns</label>
    </listViews>
    <sharingModel>FullAccess</sharingModel>
</CustomObject>